		- fixed redeclaration without definition of already defined
		  ifndef vars
		- fixed reference orientation reset after initial assembly
		  (Reinhard Resch)
		- fixed inertia computation with structural displacement
		  nodes (noted by Mattia Alioli)
		- fixed data initialization in external struct mapping
		  with membrane elements
		- fixed bug in Cardano hinge initial assembly

MBDyn 1.5.5
	Enhancements:
		- added Umfpack solver iterative refinement support
		  (Reinhard Resch)
		- added built in drive callers interface to module-octave
		  (Reinhard Resch)
		- added scaling support to Naive, Umfpack and KLU solvers
		  (based on patch by Reinhard Resch)
	Backward compatibility issues:
		- old binary modal joint databases no longer supported
		- cyclocopter inflow models moved to module-cyclocopter
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- fix binary modal joint database in MinGW
		- fix undefined const error message bug
		- fix libtool lang tag for run-time loadable modules
		  (noted by Jens van Schelve)
		- fix electric elements parsing (noted by Morten Ketelsen)
		- fix parsing on win32: MinGW/MSYS (Reinhard Resch)
		- fix naive multithread assembly bug

MBDyn 1.5.4
	Enhancements:
		- added '-N' command-line switch to set threads number
		- added module-nonsmooth-node: non-smooth dynamics support
		  using SICONOS <http://siconos.gforge.inria.fr/>
		  (Matteo Fancello)
		- added 3D variant of continuous contact constitutive law
		  (Matteo Fancello)
		- added line search nonlinear solver (Reinhard Resch)
		- added condition number output (Reinhard Resch)
		- added scalar support genel private data (Reinhard Resch)
	Backward compatibility issues:
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible